Fri Aug 12 20:51:38 BST 2005  Tom Gilbert <tom@linuxbrit.co.uk>

  * fix up autoop plugin a bit

Thu Aug 11 00:13:11 BST 2005  Tom Gilbert <tom@linuxbrit.co.uk>

  * Added two plugins from Robin Kearney <robin@riviera.org.uk>
	* Threat (US threat level :P)
	* bash (bash.org quotes)

Thu Aug 11 00:04:31 BST 2005  Tom Gilbert <tom@linuxbrit.co.uk>

  * Patches from "Alexey I. Froloff" <raorn@altlinux.ru>
	* Do not use "/home/#{Etc.getlogin}/" for default home directory, use
	"#{Etc.getpwnam(Etc.getlogin).dir}/" instead.
	* Do not try to load same plugin from different locations.  Added ability
	to disable system-wide plugins - create PLUGIN.rb.disabled in user's
	plugins directory.
	* For example, to disable freshmeat plugin installed in /usr/share/rbot/plugins/freshmeat.rb one can create empty file ~/.rbot/plugins/freshmeat.rb.disabled

Mon Aug 08 23:08:01 BST 2005  Tom Gilbert <tom@linuxbrit.co.uk>

  * new markov plugin for random inane chat

Sun Aug 07 18:20:24 BST 2005  Tom Gilbert <tom@linuxbrit.co.uk>

  * stop insult plugin being used to insult the bot

Sun Aug 07 17:53:06 BST 2005  Tom Gilbert <tom@linuxbrit.co.uk>

  * workaround for people without YAML::load_file
	* quit message for restart

Sun Aug 07 15:11:07 BST 2005  Tom Gilbert <tom@linuxbrit.co.uk>

  * fix address_prefix, broken in 0.9.9, reported by ruskie.

Sat Aug 06 00:54:34 BST 2005  Tom Gilbert <tom@linuxbrit.co.uk>

  * Released 0.9.9

Fri Aug 05 23:55:20 BST 2005  Tom Gilbert <tom@linuxbrit.co.uk>

  * few more tweaks preparing to release 0.9.9

Thu Aug 04 23:03:30 BST 2005  Tom Gilbert <tom@linuxbrit.co.uk>

  * Improved ircd recognition of rfc2812.rb
	* de-string'd, de-cap'd rfc2812.rb, looks less shouty now
	* moved the Q auth stuff (for quakenet) into a new qauth plugin (untested!)
	* finish fixing the httputil

Thu Aug 04 00:11:52 BST 2005  Tom Gilbert <tom@linuxbrit.co.uk>

  * Tweaked the debug() stuff a bit. Need to do this more cleanly really